<resources>
    <string name="app_name">MindSharpener</string>
    <string name="textview1">Instructions: </string>
    <string name="textview2">This is a simple mathematic games which is believed can train your brain. Two numbers are given randomly based on your level choice together with the operator. You just need to calculates the answer, write your answer and press check button. Every correct answer willgive you 1 point while wrong answer will deduct 1 point.</string>
    <string name="textview3">Choose Level: </string>
    <string name="button">Check</string>
    <string name="textview7">Point: </string>
    <string name="textview8">0</string>
    <string name="radiobutton1">i3</string>
    <string name="radiobutton2">i5</string>
    <string name="radiobutton3">i7</string>
    <string name="edittext" />
    <string name="second_number">Second Number</string>
    <string name="first_number">First Number</string>
    <string name="operator">Operator</string>
</resources>